Fix bg image jumps on mobile scroll v2.2

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -25,7 +25,6 @@ body{
   font-weight: 400;
   font-size: 16px;
   line-height: 1;
-  overflow: hidden;
   font-family: var(--text-font);
   background-color: #555;
   margin: 0;
